--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:padding="40dp"
+              android:padding="20sp"
               tools:context=".MainActivity">
 
     <TextView android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 1"
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 2"
@@ -77,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 3"
@@ -103,7 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 4"
@@ -129,7 +129,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 5"
@@ -155,7 +155,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 6"
@@ -181,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 7"
@@ -207,7 +207,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 8"
@@ -233,7 +233,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="6dp">
+                android:layout_margin="4dp">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Producto 9"
