--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,10 +1,308 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Main2Activity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="20sp"
+              tools:context=".Main2Activity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Factura"
+              android:textSize="20dp"
+              android:layout_gravity="center"
+    />
+
+
+    <TextView
+            android:id="@+id/et_user2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Username: "
+            android:textSize="20dp"/>
+
+
+    <TextView
+            android:id="@+id/et_email2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Email:"
+            android:textSize="20dp"/>
+
+    <LinearLayout android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+    android:orientation="horizontal">
+        <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total de productos:"
+                android:textSize="20dp"/>
+        <TextView
+                android:id="@+id/tv_total"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"/>
+
+
+    </LinearLayout>
+
+
+    <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="3"
+            android:rowCount="3">
+        <LinearLayout
+                android:id="@+id/L1"
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 1"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_1_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 2"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_2_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 3"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_3_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 4"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_4_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 5"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_5_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 6"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_6_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 7"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_7_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 8"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_8_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="@android:color/holo_green_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="4dp">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="Producto 9"
+                      android:textSize="15dp"
+                      android:layout_gravity="center"/>
+
+            <TextView
+
+                    android:id="@+id/tv_9_2"
+                    android:layout_width="100dp"
+                    android:layout_height="70dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textSize="40dp"
+                    android:textAlignment="center"
+
+
+            />
+        </LinearLayout>
+
+
+    </GridLayout>
+
+
+    <Button
+            android:id="@+id/btn2_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="Submit"
+            android:layout_margin="30sp"
+            android:layout_gravity="center"
+            android:padding="10sp"
+            android:background="@android:color/holo_purple"/>
+
+
+</LinearLayout>
