--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -33,7 +33,8 @@
 
     <LinearLayout android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginBottom="10sp">
         <TextView
 
                 android:layout_width="match_parent"
@@ -298,7 +299,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
-            android:text="Submit"
+            android:text="Share"
             android:layout_margin="30sp"
             android:layout_gravity="center"
             android:padding="10sp"
