--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:rowCount="3">
         <LinearLayout
                 android:id="@+id/L1"
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_orange_dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -73,7 +73,7 @@
         </LinearLayout>
 
         <LinearLayout
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_blue_dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -99,7 +99,7 @@
         </LinearLayout>
 
         <LinearLayout
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_purple"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -125,7 +125,7 @@
         </LinearLayout>
 
         <LinearLayout
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_orange_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -151,7 +151,7 @@
         </LinearLayout>
 
         <LinearLayout
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_red_dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -177,7 +177,7 @@
         </LinearLayout>
 
         <LinearLayout
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_green_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -203,7 +203,7 @@
         </LinearLayout>
 
         <LinearLayout
-                android:background="@android:color/holo_green_dark"
+                android:background="@android:color/holo_orange_dark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
